k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-microservice
  template:
    metadata:
      labels:
        app: java-microservice
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgres:5432/mydatabase
            - name: SPRING_DATASOURCE_USERNAME
              value: myuser
            - name: SPRING_DATASOURCE_PASSWORD
              value: mypassword
            - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
              value: kafka:9092
          image: 192.168.1.18:32000/update-service:latest
          imagePullPolicy: IfNotPresent
          name: java-microservice
          ports:
            - containerPort: 8083
      serviceAccountName: java-microservice-sa
