k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-microservice
spec:
  ports:
    - port: 80
      targetPort: 8083
  selector:
    app: java-microservice
  type: ClusterIP
