k8s/base/ingress-microservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-microservice-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: java-microservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-microservice
                port:
                  number: 80
